2004-06-25    <bilboed@localhost>

	* src/pitivi-mainapp.h (struct _PitiviMainApp): moved the windows to PitiviMainAppPrivate

	* src/pitivi-effectswindow.c: 
	* src/pitivi-effectswindow.h: Converted PitiviEffectsWindow to derivate of PitiviWindows

	* src/pitivi-toolboxwindow.c: 
	* src/pitivi-toolboxwindow.h: 
	* src/pitivi-newprojectwindow.c: 
	* src/pitivi-newprojectwindow.h: 
	* src/pitivi-windows.c:
	* src/pitivi-windows.h:
	* src/pitivi-projectwindows.c:
	* src/pitivi-projectwindows.h: Added PitiviWindows and PitiviProjectWindows classes
	Converted PitiviToolboxWindow and PitiviNewProjectWindow to be derivate of PitiviWindows

	
2004-05-28    <ez3kiel@localhost>

	* src/pitivi-projectsettings.c (pitivi_projectsettings_list_make): Creation de la liste de PitiviProjectSettings par default insere dans la PitiviMainApp

	* src/pitivi-newprojectwindow.c (pitivi_newprojectwindow_add_setting): Ajoute un nouveau setting dans la liste des reglages de la fenetre NewProjectWindow et un nouveau PitiviProjectSettings dans la PitiviMainApp

	* src/pitivi-mainapp.c (pitivi_mainapp_add_newsetting):  Ajoute un nouveau PitiviProjectSettings dans la liste existante

2004-06-05    <nemo@localhost>

	* src/pitivi-pitivisettings.c (all) : creation des settings globaux de l application

2004-05-23    <bilboed@bilboed.eptv>

	* src/pitivi-menu.c (pitivi_menu_instance_init): No need to g_strdup the second parameter to gtk_ui_manager_get_widget(), PITIVI_MAIN_MENUBAR_XML is already a const gchar* .

	* src/pitivi-toolbox.c (pitivi_toolbox_instance_init): Remove malloc, replace by NULL (self->private->group_button)

	* src/pitivi-mainapp.c (pitivi_create_new_categorie): Do not malloc a value which is meant to be filled (categorie->list_settings memory leak) !

	* src/pitivi-newprojectwindow.c (pitivi_make_video_frame): It works better when you malloc a table... with a non-null size :) (self->private->video_tabname).

2037-03-15    <loic@localhost>
